fix: 메소드 분리 및 newInstance 수정